Flex wrap to fix character list going off screen

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -41,3 +41,6 @@
   justify-content: center;
   padding: 40px;
 }
+.character-cont {
+  flex-wrap: wrap;
+}
